Fix tests with MicroProfileConfigJavaDiagnosticsTest
Signed-off-by: azerr <azerr@redhat.com>